source-deny-ip-rbac-network-filter/config/source-ip-deny-envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: source-ip-deny
  namespace: istio-system
spec:
  # Only apply to the inbound gw
  workloadSelector:
    labels:
      app: istio-ingressgateway
      istio: ingressgateway
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.network.rbac
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC"
            stat_prefix: source_ip_blocker
            rules:
              action: DENY
              policies:
                policy-default-deny-by-source-ip:
                  permissions:
                    - any: true
                  principals:
                    # Refer to https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/rbac/v3/rbac.proto#config-rbac-v3-principal
                    - remote_ip:
                        # Update to the desired source ip
                        address_prefix: 192.168.106.2
                        prefix_len: 32
